--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix src/**/*",
-    "fmt": "prettier --write src/**/*"
+    "fmt": "prettier --write src/**/*",
+    "deploy": "gh-pages -d build"
   },
-  "eslintConfig": {
-  },
+  "homepage": "https://go-nishiumi.github.io/nishiumi-app/",
+  "eslintConfig": {},
   "browserslist": {
     "production": [
       ">0.2%",
@@ -46,6 +47,7 @@
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.2",
+    "gh-pages": "^6.2.0",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
     "typescript-eslint": "^8.15.0"
