--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "playwright test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix src/**/*",
     "fmt": "prettier --write src/**/*",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "codegen": "playwright codegen http://localhost:3000/nishiumi-app/"
   },
   "homepage": "https://go-nishiumi.github.io/nishiumi-app/",
   "eslintConfig": {},
@@ -44,11 +45,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@playwright/test": "^1.49.0",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.2",
     "gh-pages": "^6.2.0",
     "globals": "^15.12.0",
+    "jest": "^27.5.1",
+    "playwright": "^1.49.0",
     "prettier": "^3.3.3",
     "typescript-eslint": "^8.15.0"
   }
