--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -30,8 +30,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 22
+
       - name: Install dependencies
         run: npm install
+
+      - name: Run eslint
+        run: npm run lint
+      - name: Run prettier
+        run: npm run fmt
+      - name: Run Test
+        run: npm run test
+        
       - name: Build
         run: npm ci && npm run build
         env:
