fix: github actionsでplaywrightを実行するための設定追加

--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -38,9 +38,11 @@ jobs:
         run: npm run lint
       - name: Run prettier
         run: npm run fmt
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
       - name: Run Test
         run: npm run test
-        
+
       - name: Build
         run: npm ci && npm run build
         env:
